refactor: streamline method calls and improve code readability in AnalyticsHelperController